--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,19 @@
     <noscript>
         <h3>Esta app necesita Javascript para funcionar</h3>
     </noscript>
+    <script>
+        console.log("Trying")
+        if('serviceWorker' in navigator){
+            window.addEventListener('load', function(){
+                navigator.serviceWorker.register('/service-worker.js')
+                .then(registration => {
+                    console.log('SW registrado')
+                })
+                .catch(registrationError => {
+                    console.log('SW no registrado')
+                })
+            })
+        }
+    </script>
 </body>
 </html>
